--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -26,18 +26,14 @@
   </div>
 
   <div fxFlex="40%" *ngIf="dish">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>Comments</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content *ngFor="let comments of dish.comments">
-        <mat-list-item>{{comments.comment}}</mat-list-item>
-        <mat-list-item>{{comments.rating}} stars</mat-list-item>
-        <mat-list-item>-- {{comments.author}} {{comments.date | date}}</mat-list-item>
-      </mat-card-content>
-    </mat-card>
+    <mat-list *ngIf="dish">
+      <h3>Comments</h3>
+      <mat-list-item *ngFor="let comment of dish.comments">
+        <h4 matLine>{{comment.comment}}</h4>
+        <p matLine>{{comment.rating}} stars</p>
+        <h4 matLine>-- {{comment.author}} {{comment.date | date}}</h4>
+      </mat-list-item>
+    </mat-list>
   </div>
 
 </div>
