--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -35,5 +35,9 @@
       </mat-list-item>
     </mat-list>
   </div>
+  <div fxFlex [hidden]="dish">
+    <mat-spinner></mat-spinner>
+    <h4>Loading Dish . . . Please Wait!</h4>
+  </div>
 
 </div>
