--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -26,7 +26,7 @@
   </div>
 
   <div fxFlex="40%" *ngIf="dish">
-    <mat-list *ngIf="dish">
+    <mat-list>
       <h3>Comments</h3>
       <mat-list-item *ngFor="let comment of dish.comments">
         <h4 matLine>{{comment.comment}}</h4>
