--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -38,10 +38,43 @@
       <mat-list-item *ngFor="let comment of dish.comments">
         <h4 matLine>{{comment.comment}}</h4>
         <p matLine>{{comment.rating}} stars</p>
-        <h4 matLine>-- {{comment.author}} {{comment.date | date}}</h4>
+        <h4 matLine>-- {{comment.author}}, {{comment.date | date}}</h4>
+      </mat-list-item>
+      <mat-list-item *ngIf="commentForm.valid">
+        <h4 matLine>{{ commentForm.value.comment }}</h4>
+        <p matLine>{{ commentForm.value.rating }} stars</p>
+        <h4 matLine>-- {{ commentForm.value.author }}</h4>
       </mat-list-item>
     </mat-list>
+
+    <div class="form-size">  
+      <form novalidate [formGroup]="commentForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field class="full-width">
+            <input matInput formControlName="author" placeholder="Name" type="text" required>
+            <mat-error *ngIf="formErrors.author">
+              {{ formErrors.author }}
+            </mat-error>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-slider matInput formControlName="rating" 
+                      min="1" max="5" step="1" value="5" thumbLabel tickInterval="1" required></mat-slider>
+        </p>
+        <p>
+          <mat-form-field class="full-width">
+            <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 required></textarea>
+            <mat-error *ngIf="formErrors.comment">
+                {{ formErrors.comment }}
+            </mat-error>
+          </mat-form-field>
+        </p>
+        <button type="submit" mat-button class="background-primary text-floral-white"
+          [disabled]="commentForm.invalid">Submit</button>
+      </form>
+    </div>
   </div>
+
   <div fxFlex [hidden]="dish">
     <mat-spinner></mat-spinner>
     <h4>Loading Dish . . . Please Wait!</h4>
