--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -38,9 +38,8 @@
 
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
 
-    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()" [hidden]="submitted">
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="firstname" placeholder="First Name" type="text">
@@ -90,4 +89,32 @@
         [disabled]="feedbackForm.invalid">Submit</button>
     </form>
   </div>
+
+  <div fxFlex *ngIf="submitted">
+    <mat-spinner></mat-spinner>
+    <h4>Submitting Form . . .</h4>
+  </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
+
+  <mat-card *ngIf="feedback" fxFlex [@expand]>
+    <mat-card-header>
+      <div mat-card-avatar></div>
+      <mat-card-title>
+        <h3>Your Submission</h3>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>First Name: {{feedback.firstname}}</p>
+      <p>Last Name: {{feedback.lastname}}</p>
+      <p>Tel. Number: {{feedback.telnum}}</p>
+      <p>E-mail address: {{feedback.email}}</p>
+      <p>May we contact you: {{feedback.agree}}</p>
+      <p>Contact method: {{feedback.contacttype}}</p>
+      <p>Feedback: {{feedback.message}}</p>
+    </mat-card-content>
+  </mat-card>
+
 </div>
