--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,9 +23,9 @@
     <h4>Loading Dish . . . Please Wait!</h4>
   </div>
   <div fxFlex *ngIf="dishErrMess">
-      <h2>Error</h2>
-      <h4>{{dishErrMess}}</h4>
-    </div>
+    <h2>Error</h2>
+    <h4>{{dishErrMess}}</h4>
+  </div>
 
   <mat-card *ngIf="promotion" fxFlex [@expand]>
     <mat-card-header>
@@ -34,16 +34,21 @@
         <h3>{{promotion.name | uppercase}}</h3>
       </mat-card-title>
     </mat-card-header>
-    <img mat-card-image src={{promotion.image}} alt={{promotion.name}}>
+    <img mat-card-image src="{{BaseURL + promotion.image}}" alt={{promotion.name}}>
     <mat-card-content>
       <p>{{promotion.description}}
       </p>
     </mat-card-content>
   </mat-card>
-  <div fxFlex [hidden]="promotion">
+  <div fxFlex [hidden]="promotion || promoErrMess">
     <mat-spinner></mat-spinner>
     <h4>Loading Promotion . . . Please Wait!</h4>
   </div>
+  <div fxFlex *ngIf="promoErrMess">
+    <h2>Error</h2>
+    <h4>{{promoErrMess}}</h4>
+  </div>
+
 
   <mat-card *ngIf="leader" fxFlex [@expand]>
     <mat-card-header>
@@ -52,15 +57,19 @@
         <h3>{{leader.name | uppercase}}</h3>
       </mat-card-title>
     </mat-card-header>
-    <img mat-card-image src={{leader.image}} alt={{leader.name}}>
+    <img mat-card-image src="{{BaseURL + leader.image}}" alt={{leader.name}}>
     <mat-card-content>
       <p>{{leader.designation}}</p>
       <p>{{leader.description}}</p>
     </mat-card-content>
   </mat-card>
-  <div fxFlex [hidden]="leader">
+  <div fxFlex [hidden]="leader || leaderErrMess">
     <mat-spinner></mat-spinner>
     <h4>Loading Leader . . . Please Wait!</h4>
+  </div>
+  <div fxFlex *ngIf="leaderErrMess">
+    <h2>Error</h2>
+    <h4>{{leaderErrMess}}</h4>
   </div>
 
 </div>
